Added: get one room endpoint
